# my-py-env-2

./: README.md  README.qmd  main.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
