[project]
name = "my-py-env-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alive-progress>=3.2.0",
    "altair>=5.5.0",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "colorcet>=3.1.0",
    "d3blocks>=1.4.11",
    "datashader>=0.18.1",
    "deltalake>=1.0.1",
    "diagrams>=0.24.4",
    "duckdb>=1.3.0",
    "faker>=37.3.0",
    "fancyimpute>=0.7.0",
    "ffmpeg-python>=0.2.0",
    "folium>=0.19.6",
    "graphviz>=0.20.3",
    "great-tables>=0.17.0",
    "hiclass>=5.0.4",
    "hierarchicalforecast>=1.2.1",
    "hiveplotlib>=0.25.1",
    "holidays>=0.73",
    "holoviews>=1.20.2",
    "httpx>=0.28.1",
    "ibis>=3.3.0",
    "igraph>=0.11.8",
    "imblearn>=0.0",
    "itables>=2.4.0",
    "jupyter>=1.1.1",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "mermaid-py>=0.8.0",
    "miceforest>=6.0.3",
    "missingno>=0.5.2",
    "mlforecast>=1.0.2",
    "networkx>=3.4.2",
    "neuralforecast>=3.0.1",
    "neuralprophet[live]>=0.9.0",
    "nltk>=3.9.1",
    "numba>=0.61.2",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "pandera>=0.24.0",
    "patchworklib>=0.6.3",
    "patsy>=1.0.1",
    "permetrics>=2.0.0",
    "pillow>=11.2.1",
    "pip>=25.1.1",
    "plotly>=6.1.2",
    "plotnine>=0.14.5",
    "polars[all]>=1.30.0",
    "prophet>=1.1.7",
    "pyarrow>=17.0.0",
    "pycairo>=1.28.0",
    "pyclustering>=0.10.1.2",
    "pylint>=3.3.7",
    "pyod>=2.0.5",
    "pyodbc>=5.2.0",
    "pyskim>=0.1.5",
    "python-dotenv>=1.1.0",
    "pyvis>=0.3.2",
    "quarto>=0.1.0",
    "ruptures>=1.1.9",
    "scikeras>=0.13.0",
    "scikit-optimize>=0.10.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sktime>=0.37.0",
    "snowflake-snowpark-python>=1.32.0",
    "spectrum>=0.9.0",
    "sqlalchemy>=2.0.41",
    "statsforecast>=2.0.1",
    "statsmodels>=0.14.4",
    "sweetviz>=2.3.1",
    "sympy>=1.14.0",
    "tensorflow>=2.18.1",
    "torch>=2.4.1",
    "tsfeatures>=0.4.5",
    "utilsforecast>=0.2.12",
    "wordcloud>=1.9.4",
    "xlrd>=2.0.1",
    "xlsxwriter>=3.2.3",
    "yellowbrick>=1.5",
]
